Lists_tuples_Dictionaries

--- a/02_Sequence_Selection.ipynb
+++ b/02_Sequence_Selection.ipynb
@@ -105,7 +105,8 @@
     "Selection allows us to make decisions in our code. We can choose to execute certain blocks of code based on specific conditions. The most common selection statements are `if`, `else if`, and `else`.\n",
     "\n",
     "Selection can often be visulised as a flowchart.  The flowchart below shows the basic structure of an `if` statement:\n",
-    "<img src=\"img/Topic_2/1.png\" alt=\"Flowchart of an if statement c/o https://www.google.com/url?sa=i&url=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F71020681%2Fstandard-way-of-representing-selection-in-flowcharts&psig=AOvVaw3cOmWAQvrRmzZhucn9pPQ1&ust=1744072763431000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLj2gb_XxIwDFQAAAAAdAAAAABAE\" width=\"400\"/>\n",
+    "\n",
+    "<img src=\"img/02/1.png\" alt=\"Flowchart of an if statement c/o https://www.google.com/url?sa=i&url=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F71020681%2Fstandard-way-of-representing-selection-in-flowcharts&psig=AOvVaw3cOmWAQvrRmzZhucn9pPQ1&ust=1744072763431000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLj2gb_XxIwDFQAAAAAdAAAAABAE\" width=\"400\"/>\n",
     "\n",
     "In the above a street number is entered.  If the number is even, the program will set *direction* to *eastbound*.  Otherwise, it will set *direction* to *westbound*.  The paths diverge and if the user never enters an odd number, the program will never set *direction* to *westbound*.\n",
     "\n",
@@ -275,7 +276,7 @@
     "## Nested Selection\n",
     "Nested selection statements are selection statements that are placed inside other selection statements. This allows us to make more complex decisions in our code.\n",
     "\n",
-    "<img src=\"img/Topic_2/2.gif\" alt=\"Flowchart of a nested if statement c/o https://stackoverflow.com/questions/28421397/nested-if-else-which-one-is-it-out-of-the-options\" width=\"400\"/>\n",
+    "<img src=\"img/02/2.gif\" alt=\"Flowchart of a nested if statement c/o https://stackoverflow.com/questions/28421397/nested-if-else-which-one-is-it-out-of-the-options\" width=\"400\"/>\n",
     "\n",
     "In the above example, we first check if the number is positive.  If true, we then check if the numker is divisible by 3.  If true, we print \"The number is positive and divisible by 3\".  If false, we print \"The number is positive but not divisible by 3\".  If the first condition is false, we print \"The number is zero or negative\".\n",
     "\n",
@@ -386,7 +387,7 @@
     "Nested selection statements as shown above can be difficult to read and understand.  The `if-elif-else` statement is a more concise way to write similar logic.\n",
     "\n",
     "The following flowchart could be written in Python as:\n",
-    "<img src=\"img/Topic_2/3.png\" alt=\"Flowchart of an if-elif-else statement c/o https://flylib.com/books/en/2.891.1.100/3/\" width=\"400\"/>\n",
+    "<img src=\"img/02/3.png\" alt=\"Flowchart of an if-elif-else statement c/o https://flylib.com/books/en/2.891.1.100/3/\" width=\"400\"/>\n",
     "\n",
     "```python\n",
     "balance = int(input(\"Enter account balance: \"))\n",
