--- a/02_Sequence_Selection.ipynb
+++ b/02_Sequence_Selection.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,10 +65,10 @@
      "evalue": "name 'a' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Ex 1:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m result \u001b[38;5;241m=\u001b[39m a \u001b[38;5;241m+\u001b[39m b\n\u001b[1;32m      3\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m      4\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Ex 1:\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m result = \u001b[43ma\u001b[49m + b\n\u001b[32m      3\u001b[39m a = \u001b[32m2\u001b[39m\n\u001b[32m      4\u001b[39m b = \u001b[32m10\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'a' is not defined"
      ]
     }
    ],
@@ -78,21 +78,42 @@
     "a = 2\n",
     "b = 10\n",
     "\n",
-    "print(\"{a} + {b} = {result}\")\n",
-    "\n",
+    "print(f\"{a} + {b} = {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Ex 2:\n",
-    "print(\"Hello {name}!\")\n",
-    "name  = \"Alice\"\n",
-    "\n",
+    "print(f\"Hello {name}!\")\n",
+    "name  = \"Alice\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Ex 3:\n",
     "print(\"Hello {name}!\")\n",
-    "name = input(\"Enter your name: \")\n",
-    "\n",
+    "name = input(\"Enter your name: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Ex 4:\n",
     "a = \"20\"\n",
     "b = \"10\"\n",
     "result = a + b\n",
-    "print(\"{a} + {b} = {result}\")\n",
+    "print(f\"{a} + {b} = {result}\")\n",
     "num1 = int(a)\n",
     "num2 = int(b)"
    ]
@@ -387,7 +408,7 @@
     "Nested selection statements as shown above can be difficult to read and understand.  The `if-elif-else` statement is a more concise way to write similar logic.\n",
     "\n",
     "The following flowchart could be written in Python as:\n",
-    "<img src=\"img/02/3.png\" alt=\"Flowchart of an if-elif-else statement c/o https://flylib.com/books/en/2.891.1.100/3/\" width=\"400\"/>\n",
+    "<img src=\"img/02/03.png\" alt=\"Flowchart of an if-elif-else statement c/o https://flylib.com/books/en/2.891.1.100/3/\" width=\"400\"/>\n",
     "\n",
     "```python\n",
     "balance = int(input(\"Enter account balance: \"))\n",
@@ -429,7 +450,7 @@
     "\n",
     "Often, we need to reframe our logic and/or conditions to use the `if-elif-else` statement.  The flowchart above can be re-written as:\n",
     "\n",
-    "<img src=\"img/Topic_2/2.gif\" alt=\"Flowchart of a nested if statement c/o https://stackoverflow.com/questions/28421397/nested-if-else-which-one-is-it-out-of-the-options\" width=\"400\"/>\n",
+    "<img src=\"img/02/02.gif\" alt=\"Flowchart of a nested if statement c/o https://stackoverflow.com/questions/28421397/nested-if-else-which-one-is-it-out-of-the-options\" width=\"400\"/>\n",
     "\n",
     "```python\n",
     "number = int(input(\"Enter a number: \"))\n",
@@ -569,7 +590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -583,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
